--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -26,6 +26,7 @@
     "@e2esdk/api": "workspace:*",
     "@e2esdk/core": "workspace:*",
     "@e2esdk/crypto": "workspace:*",
+    "@fastify/cors": "^8.2.0",
     "dotenv": "^16.0.3",
     "fastify": "^4.9.2",
     "fastify-micro": "4.0.0-beta.1",
