--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -47,7 +47,7 @@
     "@e2esdk/client": "workspace:*",
     "@types/node": "^18.11.9",
     "@types/react": "^18.0.25",
-    "react": "^16.8.0 || ^17.0.0 || ^18.0.0",
+    "react": "^18.2.0",
     "tsconfig": "workspace:*",
     "tsup": "^6.5.0",
     "typescript": "^4.9.3"
