--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -38,6 +38,7 @@
   "scripts": {
     "dev": "tsup --watch",
     "build": "tsup --clean",
+    "typecheck": "tsc",
     "test": "jest --color"
   },
   "devDependencies": {
