--- a/packages/crypto/package.json
+++ b/packages/crypto/package.json
@@ -44,6 +44,7 @@
   "scripts": {
     "dev": "tsup --watch",
     "build": "tsup --clean",
+    "typecheck": "tsc",
     "test": "jest --color"
   },
   "dependencies": {
