--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -37,13 +37,14 @@
   },
   "scripts": {
     "dev": "tsup --watch",
-    "build": "tsup --clean"
+    "build": "tsup --clean",
+    "typecheck": "tsc"
   },
   "dependencies": {
     "@e2esdk/api": "workspace:*",
     "@e2esdk/core": "workspace:*",
     "@e2esdk/crypto": "workspace:*",
-    "local-state-sync": "1.0.0-beta.5",
+    "local-state-sync": "1.0.0-beta.6",
     "mitt": "^3.0.0",
     "zod": "^3.19.1"
   },
