--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -14,13 +14,15 @@
     "node": ">=16"
   },
   "scripts": {
+    "predev": "mkdir -p ../../.volumes/logs/@e2esdk/server",
     "dev": "run-p dev:*",
     "dev:build": "swc src --copy-files --include-dotfiles -d build --watch",
-    "dev:start": "nodemon ./build/main.js | pino-pretty",
+    "dev:start": "nodemon ./build/main.js | tee -i ../../.volumes/logs/@e2esdk/server/$(date +%Y-%m-%d_%H.%M.%S).ndjson | pino-pretty",
     "start": "NODE_ENV=production node ./build/main.js",
     "build": "swc src --copy-files --include-dotfiles -d build",
     "postbuild": "chmod +x ./build/database/operations.js",
-    "db": "./build/database/operations.js"
+    "typecheck": "tsc",
+    "db": "zx ./build/database/operations.js"
   },
   "dependencies": {
     "@e2esdk/api": "workspace:*",
