--- a/packages/server/.env.example
+++ b/packages/server/.env.example
@@ -1,6 +1,7 @@
 NODE_ENV=development
-DEPLOYMENT_URL=http://localhost:3000
-POSTGRESQL_URL=postgres://postgres:password@localhost:5432/e2esdk
+PORT=3001
+DEPLOYMENT_URL=http://localhost:3001
+POSTGRESQL_URL=postgres://postgres:password@localhost:3002/e2esdk
 RELEASE_TAG=local
 NEXT_PUBLIC_RELEASE_TAG=local
 DEBUG=true
