chore: No need for build to depend on typecheck
Better to keep build fast, and run typecheck separately

--- a/turbo.json
+++ b/turbo.json
@@ -2,7 +2,7 @@
   "$schema": "https://turbo.build/schema.json",
   "pipeline": {
     "build": {
-      "dependsOn": ["^build", "typecheck"],
+      "dependsOn": ["^build"],
       "outputs": ["dist/**", "build/**", ".next/**", ".vite/**"]
     },
     "typecheck": {
