--- a/packages/devtools/package.json
+++ b/packages/devtools/package.json
@@ -26,7 +26,7 @@
     "/dist"
   ],
   "scripts": {
-    "dev": "vite --port 3000 --host --clearScreen false",
+    "dev": "vite --port 3000 --clearScreen false",
     "build": "vite build",
     "typecheck": "tsc"
   },
