--- a/packages/server/Dockerfile
+++ b/packages/server/Dockerfile
@@ -1,34 +1,30 @@
 # Based on Turbo's Docker pruning technique:
 # https://turbo.build/repo/docs/handbook/deploying-with-docker
 
-FROM node:16.18-alpine AS slicer
+FROM node:16-alpine AS slicer
 # Check https://github.com/nodejs/docker-node/tree/b4117f9333da4138b03a546ec926ef50a31506c3#nodealpine
 # to understand why libc6-compat might be needed.
 RUN apk add --no-cache libc6-compat
-RUN apk update
 # Set working directory
 WORKDIR /app
 RUN yarn global add turbo
-COPY ./ .
-RUN turbo --version
+COPY . .
 RUN turbo prune --scope=@e2esdk/server --docker --out-dir docker-dist
-RUN ls -la .
 
 # ------------------------------------------------------------------------------
 
 # Add lockfile and package.json's of isolated subworkspace
-FROM node:16.18-alpine AS builder
+FROM node:16-alpine AS builder
 RUN apk add --no-cache libc6-compat
-RUN apk update
 # this enables support for pnpm - https://nodejs.org/api/corepack.html
 RUN corepack enable
 WORKDIR /app
 
 # First install the dependencies (as they change less often)
-COPY .gitignore .gitignore
+COPY .gitignore .
 COPY --from=slicer /app/docker-dist/json/ .
-COPY --from=slicer /app/docker-dist/pnpm-lock.yaml ./pnpm-lock.yaml
-RUN pnpm install
+COPY --from=slicer /app/docker-dist/pnpm-lock.yaml .
+RUN pnpm install --frozen-lockfile
 
 # Build the project
 COPY --from=slicer /app/docker-dist/full/ .
@@ -37,7 +33,7 @@ RUN pnpm build --filter=@e2esdk/server
 
 # ------------------------------------------------------------------------------
 
-FROM node:16.18-alpine AS runner
+FROM node:16-alpine AS runner
 WORKDIR /app
 
 ENV NODE_ENV production
@@ -52,4 +48,4 @@ COPY --from=builder --chown=e2esdk:nodejs /app/ .
 
 EXPOSE 3000
 
-CMD node packages/server/build/main.js
+CMD ["node", "packages/server/build/main.js"]
