--- a/packages/devtools/package.json
+++ b/packages/devtools/package.json
@@ -37,19 +37,17 @@
   },
   "dependencies": {
     "@chakra-ui/react": "^2.4.1",
-    "@chakra-ui/styled-system": ">=2.0.0",
-    "@chakra-ui/theme-tools": "^2.0.13",
     "@e2esdk/react": "workspace:*",
     "@emotion/cache": "^11.10.5",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
-    "framer-motion": "^7.6.7",
-    "react-hook-form": "^7.39.4",
+    "framer-motion": "^7.6.9",
+    "react-hook-form": "^7.39.5",
     "react-icons": "^4.6.0",
     "zod": "^3.19.1"
   },
   "devDependencies": {
-    "@babel/core": ">=7.0.0 <8.0.0",
+    "@babel/core": "^7.20.2",
     "@e2esdk/client": "workspace:*",
     "@e2esdk/crypto": "workspace:*",
     "@e2esdk/server": "workspace:*",
@@ -59,7 +57,7 @@
     "@vitejs/plugin-react": "^2.2.0",
     "dotenv": "^16.0.3",
     "react": "^18.2.0",
-    "react-dom": ">=18.0.0 <19.0.0",
+    "react-dom": "^18.2.0",
     "rollup-plugin-visualizer": "^5.8.3",
     "typescript": "^4.9.3",
     "vite": "^3.2.4"
