chore: Make Docker image smaller & faster to build
First, we split build targets:
- for NPM, we want dual ESM/CJS + type definitions
- For Docker, we only need ESM

We can also leverage the PNPM in-memory cache with pnpm fetch,
to only run the deps install step when the lockfile changes
(not the individual package.json)

We can further thin the resulting image by pruning dev dependencies.
This involves moving the Jest config to devDeps, and moving
zx back to runtime deps, as we need it to run database ops.

--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
   },
   "scripts": {
     "dev": "FORCE_COLOR=3 turbo run dev",
-    "build": "turbo run build",
+    "build:npm": "turbo run build:npm",
+    "build:docker": "docker build . -f packages/server/Dockerfile -t e2esdk:local",
     "typecheck": "turbo run typecheck",
     "test": "turbo run test",
     "lint": "turbo run lint",
     "keygen": "./packages/keygen/dist/keygen.cjs",
-    "db": "pnpm --filter server db",
-    "build:docker": "docker build . -f packages/server/Dockerfile -t e2esdk:local"
+    "db": "pnpm --filter server db"
   },
   "devDependencies": {
     "@types/jest": "^29.2.3",
