--- a/config/jest/package.json
+++ b/config/jest/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "main": "jest.config.mjs",
   "types": "jest.config.d.ts",
-  "dependencies": {
+  "devDependencies": {
     "@swc/core": "^1.3.19",
     "@swc/jest": "^0.2.23",
     "@types/jest": "^29.2.3",
