--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -28,16 +28,12 @@
     "entry": [
       "src/index.ts"
     ],
-    "format": [
-      "esm",
-      "cjs"
-    ],
     "dts": true,
     "treeshake": true
   },
   "scripts": {
-    "dev": "tsup --watch",
-    "build": "tsup --clean",
+    "dev": "tsup --format esm --watch",
+    "build:npm": "tsup --clean --format esm,cjs",
     "typecheck": "tsc"
   },
   "dependencies": {
