--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -28,16 +28,12 @@
     "entry": [
       "src/index.ts"
     ],
-    "format": [
-      "esm",
-      "cjs"
-    ],
-    "dts": true,
     "treeshake": true
   },
   "scripts": {
-    "dev": "tsup --watch",
-    "build": "tsup --clean",
+    "dev": "tsup --format esm --dts --watch",
+    "build:npm": "tsup --clean --format esm,cjs --dts",
+    "build:server": "tsup --clean --format esm",
     "typecheck": "tsc",
     "test": "jest --color"
   },
