--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "url": "https://francoisbest.com"
   },
   "scripts": {
-    "dev": "FORCE_COLOR=3 turbo run dev",
+    "dev": "FORCE_COLOR=3 turbo run dev --filter=./packages/*",
     "build:npm": "turbo run build:npm",
     "build:docker": "docker build . -f packages/server/Dockerfile -t e2esdk:local",
     "typecheck": "turbo run typecheck",
