feat: Use branded (seeded) sign key pairs for demos

--- a/packages/server/.env.example
+++ b/packages/server/.env.example
@@ -19,5 +19,5 @@ CORS_ALLOWED_ORIGINS=https://example.com,/\.foo.xyz$/
 CORS_FORCE_ENABLE=true
 
 # Generate a key pair with `yarn keygen signature`
-SIGNATURE_PUBLIC_KEY=
-SIGNATURE_PRIVATE_KEY=
+SIGNATURE_PUBLIC_KEY=gsE7B63ETtNDIzAwXEp3X1Hv12WCKGH6h7brV3U9NKE
+SIGNATURE_PRIVATE_KEY=___examples-server-signkey__NOT-FOR-PROD__yCwTsHrcRO00MjMDBcSndfUe_XZYIoYfqHtutXdT00oQ
