--- a/packages/devtools/package.json
+++ b/packages/devtools/package.json
@@ -44,6 +44,7 @@
     "framer-motion": "^7.6.9",
     "react-hook-form": "^7.39.5",
     "react-icons": "^4.6.0",
+    "react-query": "^3.39.2",
     "zod": "^3.19.1"
   },
   "devDependencies": {
