chore: Typechecking requires deps to be built

--- a/turbo.json
+++ b/turbo.json
@@ -10,6 +10,7 @@
       "outputs": ["dist/**", "build/**"]
     },
     "typecheck": {
+      "dependsOn": ["^build:npm"],
       "outputs": []
     },
     "lint": {
