--- a/packages/devtools/package.json
+++ b/packages/devtools/package.json
@@ -42,6 +42,7 @@
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "framer-motion": "^7.6.9",
+    "react-focus-lock": "^2.9.2",
     "react-hook-form": "^7.39.5",
     "react-icons": "^4.6.0",
     "react-query": "^3.39.2",
