--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -38,7 +38,7 @@
     "zx": "^7.1.1"
   },
   "devDependencies": {
-    "@fastify/sensible": "*",
+    "@fastify/sensible": "^5.1.1",
     "@swc/cli": "^0.1.57",
     "@swc/core": "^1.3.19",
     "@swc/helpers": "^0.4.14",
@@ -47,7 +47,6 @@
     "nodemon": "^2.0.20",
     "npm-run-all": "^4.1.5",
     "pino-pretty": "^9.1.1",
-    "ts-node": "^10.9.1",
     "tsconfig": "workspace:*",
     "typescript": "^4.9.3"
   },
