chore: Fix Vue example public key

--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "scripts": {
     "dev": "FORCE_COLOR=3 turbo run dev --filter=./packages/*",
+    "dev:examples": "FORCE_COLOR=3 turbo run dev --filter=./examples/*",
+    "dev:all": "FORCE_COLOR=3 turbo run dev",
     "build:npm": "turbo run build:npm",
     "build:docker": "docker build . -f packages/server/Dockerfile -t e2esdk:local",
     "typecheck": "turbo run typecheck",
