fix: Keygen CLI redirect

--- a/packages/server/.env.example
+++ b/packages/server/.env.example
@@ -18,6 +18,6 @@ CORS_ALLOWED_ORIGINS=https://example.com,/\.foo.xyz$/
 # CORS is only enabled in production, use this to force it
 CORS_FORCE_ENABLE=true
 
-# Generate a key pair with `yarn keygen signature`
+# Generate a key pair with `pnpm keygen signature`
 SIGNATURE_PUBLIC_KEY=gsE7B63ETtNDIzAwXEp3X1Hv12WCKGH6h7brV3U9NKE
 SIGNATURE_PRIVATE_KEY=___examples-server-signkey__NOT-FOR-PROD__yCwTsHrcRO00MjMDBcSndfUe_XZYIoYfqHtutXdT00oQ
