--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "typecheck": "turbo run typecheck",
     "test": "turbo run test",
     "lint": "turbo run lint",
-    "keygen": "./packages/keygen/dist/keygen.cjs",
-    "db": "pnpm --filter server db"
+    "keygen": "pnpm --filter keygen run keygen",
+    "db": "pnpm --filter server run db"
   },
   "devDependencies": {
     "@types/jest": "^29.2.3",
