--- a/packages/keygen/package.json
+++ b/packages/keygen/package.json
@@ -33,7 +33,8 @@
   "scripts": {
     "dev": "tsup --watch",
     "build:npm": "tsup --clean",
-    "typecheck": "tsc"
+    "typecheck": "tsc",
+    "keygen": "zx ./dist/keygen.js"
   },
   "dependencies": {
     "@e2esdk/crypto": "workspace:*",
