ref(crypto): Derive identity from main key
Identity keys are now derived from the userId and main key.
This allows a login procedure without involving the server
(everything happens locally).

In addition, a signature is added as proof of ownership of
a given identity (signing userId and the sharing public key,
so that anyone can verify an identity).

Note: breaking changes in the data model require resetting
and reseeding the database.

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dev:examples": "FORCE_COLOR=3 turbo run dev --filter=./examples/*",
     "dev:all": "FORCE_COLOR=3 turbo run dev",
     "build:npm": "turbo run build:npm",
+    "build:server": "turbo run build:server",
     "build:docker": "docker build . -f packages/server/Dockerfile -t e2esdk:local",
     "typecheck": "turbo run typecheck",
     "test": "turbo run test",
