--- a/packages/devtools/package.json
+++ b/packages/devtools/package.json
@@ -41,11 +41,12 @@
     "@emotion/cache": "^11.10.5",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@tanstack/react-query": "^4.18.0",
+    "@tanstack/react-query-devtools": "^4.18.0",
     "framer-motion": "^7.6.9",
     "react-focus-lock": "^2.9.2",
     "react-hook-form": "^7.39.5",
     "react-icons": "^4.6.0",
-    "react-query": "^3.39.2",
     "zod": "^3.19.1"
   },
   "devDependencies": {
