--- a/packages/server/.env.example
+++ b/packages/server/.env.example
@@ -6,6 +6,10 @@ RELEASE_TAG=local
 NEXT_PUBLIC_RELEASE_TAG=local
 DEBUG=true
 
+# Generate a key pair with `pnpm keygen signature`
+SIGNATURE_PUBLIC_KEY=gsE7B63ETtNDIzAwXEp3X1Hv12WCKGH6h7brV3U9NKE
+SIGNATURE_PRIVATE_KEY=___examples-server-signkey__NOT-FOR-PROD__yCwTsHrcRO00MjMDBcSndfUe_XZYIoYfqHtutXdT00oQ
+
 # CORS --
 
 # Comma-separated list of allowed origins
@@ -13,11 +17,7 @@ DEBUG=true
 # Example: this will match
 # - example.com
 # - all subdomains (but not TLD) of foo.xyz
-CORS_ALLOWED_ORIGINS=https://example.com,/\.foo.xyz$/
+# CORS_ALLOWED_ORIGINS=https://example.com,/\.foo.xyz$/
 
-# CORS is only enabled in production, use this to force it
-CORS_FORCE_ENABLE=true
-
-# Generate a key pair with `pnpm keygen signature`
-SIGNATURE_PUBLIC_KEY=gsE7B63ETtNDIzAwXEp3X1Hv12WCKGH6h7brV3U9NKE
-SIGNATURE_PRIVATE_KEY=___examples-server-signkey__NOT-FOR-PROD__yCwTsHrcRO00MjMDBcSndfUe_XZYIoYfqHtutXdT00oQ
+# CORS is only enabled in production, use this to force it:
+# CORS_FORCE_ENABLE=true
