--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -27,6 +27,7 @@
     "@e2esdk/api": "workspace:*",
     "@e2esdk/crypto": "workspace:*",
     "@fastify/cors": "^8.2.0",
+    "@fastify/websocket": "^7.1.1",
     "dotenv": "^16.0.3",
     "fastify": "^4.10.2",
     "fastify-micro": "4.0.0-beta.3",
@@ -42,6 +43,7 @@
     "@swc/core": "^1.3.21",
     "@swc/helpers": "^0.4.14",
     "@types/node": "^18.11.10",
+    "@types/ws": "^8.5.3",
     "chokidar": "^3.5.3",
     "nodemon": "^2.0.20",
     "npm-run-all": "^4.1.5",
