--- a/examples/with-vue/package.json
+++ b/examples/with-vue/package.json
@@ -10,19 +10,19 @@
     "type-check": "vue-tsc --noEmit"
   },
   "dependencies": {
-    "vue": "^3.2.45",
-    "vue-router": "^4.1.6",
     "@e2esdk/client": "workspace:*",
-    "@e2esdk/devtools": "workspace:*"
+    "@e2esdk/devtools": "workspace:*",
+    "vue": "^3.2.45",
+    "vue-router": "^4.1.6"
   },
   "devDependencies": {
-    "@types/node": "^16.18.3",
+    "@types/node": "^16.18.4",
     "@vitejs/plugin-vue": "^3.2.0",
     "@vitejs/plugin-vue-jsx": "^2.1.1",
     "@vue/tsconfig": "^0.1.3",
     "npm-run-all": "^4.1.5",
     "typescript": "~4.7.4",
     "vite": "^3.2.4",
-    "vue-tsc": "^1.0.9"
+    "vue-tsc": "^1.0.10"
   }
 }
