--- a/examples/fullstack/contact-forms/src/hasura/.env.example
+++ b/examples/fullstack/contact-forms/src/hasura/.env.example
@@ -1,16 +1,17 @@
 # Config
-HASURA_GRAPHQL_ENABLE_CONSOLE=false
+HASURA_GRAPHQL_ENABLE_CONSOLE=true
 HASURA_GRAPHQL_ENABLE_TELEMETRY=false
 HASURA_GRAPHQL_ENABLED_LOG_TYPES="startup, http-log, webhook-log, websocket-log, query-log"
 HASURA_GRAPHQL_LOG_LEVEL=info
 HASURA_GRAPHQL_SHOW_UPDATE_NOTIFICATION=false
 HASURA_GRAPHQL_SERVER_PORT=8080
+HASURA_GRAPHQL_CORS_DOMAIN="http://localhost:4000"
 
 # Authentication
 HASURA_GRAPHQL_UNAUTHORIZED_ROLE=public
 
 # Local only
-HASURA_GRAPHQL_DATABASE_URL=postgres://postgres:password@db-app:5432/app
+HASURA_GRAPHQL_DATABASE_URL=postgres://postgres:password@app-db:5432/app
 
-# Hasura admin secret
-HASURA_GRAPHQL_ADMIN_SECRET=5CqIJvYTZOf3RXCT6jZGPrFIDaSu6zth62eWb0OtumY
+# Hasura admin "secret" (it's the example signature public key)
+HASURA_GRAPHQL_ADMIN_SECRET=gsE7B63ETtNDIzAwXEp3X1Hv12WCKGH6h7brV3U9NKE
