--- a/examples/fullstack/contact-forms/src/hasura/metadata/databases/databases.yaml
+++ b/examples/fullstack/contact-forms/src/hasura/metadata/databases/databases.yaml
@@ -3,6 +3,6 @@
   configuration:
     connection_info:
       use_prepared_statements: false
-      database_url: postgres://postgres:password@db-app:5432/app
+      database_url: postgres://postgres:password@app-db:5432/app
       isolation_level: read-committed
   tables: "!include app/tables/tables.yaml"
