--- a/packages/devtools/package.json
+++ b/packages/devtools/package.json
@@ -25,15 +25,23 @@
   "files": [
     "/dist"
   ],
+  "tsup": {
+    "entry": [
+      "src/index.tsx"
+    ],
+    "format": [],
+    "dts": true,
+    "treeshake": true
+  },
   "scripts": {
     "dev": "vite --port 3000 --clearScreen false",
-    "build:npm": "vite build",
+    "build:npm": "run-p build:npm:*",
+    "build:npm:bundle": "vite build",
+    "build:npm:types": "tsup",
     "typecheck": "tsc"
   },
   "peerDependencies": {
-    "@e2esdk/client": "workspace:*",
-    "react": "^16.8.0 || ^17.0.0 || ^18.0.0",
-    "react-dom": "^16.8.0 || ^17.0.0 || ^18.0.0"
+    "@e2esdk/client": "workspace:*"
   },
   "dependencies": {
     "@chakra-ui/react": "^2.4.2",
@@ -59,9 +67,11 @@
     "@types/react-dom": "^18.0.9",
     "@vitejs/plugin-react": "^2.2.0",
     "dotenv": "^16.0.3",
+    "npm-run-all": "^4.1.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "rollup-plugin-visualizer": "^5.8.3",
+    "tsup": "^6.5.0",
     "typescript": "^4.9.3",
     "vite": "^3.2.4"
   }
