--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,6 +11,10 @@ jobs:
   ci:
     name: Integration
     runs-on: ubuntu-latest
+    env:
+      TURBO_API: http://127.0.0.1:9080
+      TURBO_TOKEN: turbo-local-cache
+      TURBO_TEAM: e2esdk
 
     steps:
       - uses: actions/checkout@v3
@@ -25,11 +29,11 @@ jobs:
           node-version: lts/*
           cache: pnpm
 
-      - name: Cache Turbo
-        uses: actions/cache@v3
+      - name: Turbo cache server
+        uses: felixmosh/turborepo-gh-artifacts@v2
         with:
-          path: node_modules/.cache/turbo
-          key: ${{ runner.os }}-turbo
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
+          server-token: ${{ env.TURBO_TOKEN }}
 
       - name: Install dependencies
         run: pnpm install
