--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -32,6 +32,7 @@
     "fastify": "^4.10.2",
     "fastify-micro": "4.0.0-beta.3",
     "fastify-plugin": "^4.3.0",
+    "mitt": "^3.0.0",
     "postgres": "^3.3.2",
     "zod": "^3.19.1",
     "zod-to-json-schema": "^3.19.3",
