--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -38,8 +38,8 @@
     "typecheck": "tsc"
   },
   "dependencies": {
-    "@e2esdk/api": "workspace:*",
-    "@e2esdk/crypto": "workspace:*",
+    "@e2esdk/api": "workspace:^*",
+    "@e2esdk/crypto": "workspace:^*",
     "local-state-sync": "1.0.0-beta.6",
     "mitt": "^3.0.0",
     "zod": "^3.19.1"
