--- a/packages/devtools/package.json
+++ b/packages/devtools/package.json
@@ -42,11 +42,11 @@
     "typecheck": "tsc"
   },
   "peerDependencies": {
-    "@e2esdk/client": "workspace:*"
+    "@e2esdk/client": "workspace:^*"
   },
   "dependencies": {
     "@chakra-ui/react": "^2.4.2",
-    "@e2esdk/react": "workspace:*",
+    "@e2esdk/react": "workspace:^*",
     "@emotion/cache": "^11.10.5",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
@@ -60,9 +60,9 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.5",
-    "@e2esdk/client": "workspace:*",
-    "@e2esdk/crypto": "workspace:*",
-    "@e2esdk/server": "workspace:*",
+    "@e2esdk/client": "workspace:^*",
+    "@e2esdk/crypto": "workspace:^*",
+    "@e2esdk/server": "workspace:^*",
     "@types/node": "^18.11.10",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.9",
