--- a/packages/keygen/package.json
+++ b/packages/keygen/package.json
@@ -38,7 +38,7 @@
     "keygen": "zx ./dist/keygen.js"
   },
   "dependencies": {
-    "@e2esdk/crypto": "workspace:*",
+    "@e2esdk/crypto": "workspace:^*",
     "zod": "^3.19.1",
     "zx": "^7.1.1"
   },
