--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -24,8 +24,8 @@
     "db": "zx ./build/database/operations.js"
   },
   "dependencies": {
-    "@e2esdk/api": "workspace:*",
-    "@e2esdk/crypto": "workspace:*",
+    "@e2esdk/api": "workspace:^*",
+    "@e2esdk/crypto": "workspace:^*",
     "@fastify/cors": "^8.2.0",
     "@fastify/swagger": "^8.2.0",
     "@fastify/swagger-ui": "^1.3.0",
