fix: Run changeset generation in two stages
See https://stackoverflow.com/questions/3284292/can-a-git-hook-automatically-add-files-to-the-commit

--- a/config/changeset/package.json
+++ b/config/changeset/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "pre-commit": "zx ./src/pre-commit.mjs"
+    "post-commit": "zx ./src/post-commit.mjs"
   },
   "dependencies": {
     "zod": "^3.19.1",
