fix: Don't run scripts (including Husky)

--- a/packages/server/Dockerfile
+++ b/packages/server/Dockerfile
@@ -43,7 +43,7 @@ RUN pnpm turbo build:server
 RUN rm -rf node_modules
 RUN find -type d -name node_modules -exec rm -rf {} +
 RUN find -type d -name .turbo -exec rm -rf {} +
-RUN pnpm install --offline --prod
+RUN pnpm install --offline --prod --ignore-scripts
 
 # ------------------------------------------------------------------------------
 
