--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -78,6 +78,10 @@ jobs:
           file: packages/server/Dockerfile
           build-args: |
             RELEASE_TAG=${{ env.RELEASE_TAG }}
+            BUILD_URL=https://github.com/${{github.repository}}/actions/runs/${{github.run_id}}
+          labels: |
+            org.opencontainers.image.revision=${{ env.GITHUB_SHA }}
+            org.opencontainers.image.created=$(date -u +'%Y-%m-%dT%H:%M:%SZ')
           tags: |
             e2esdk/server:ci
             e2esdk/server:${{ needs.tag.outputs.docker-tag }}
