--- a/packages/server/.env.example
+++ b/packages/server/.env.example
@@ -3,6 +3,7 @@ PORT=3001
 DEPLOYMENT_URL=http://localhost:3001
 POSTGRESQL_URL=postgres://postgres:password@localhost:3002/e2esdk
 RELEASE_TAG=local
+BUILD_URL=local
 DEBUG=true
 
 # Generate a key pair with `pnpm keygen signature`
