--- a/packages/server/Dockerfile
+++ b/packages/server/Dockerfile
@@ -16,7 +16,7 @@ RUN turbo prune --scope=@e2esdk/server --docker --out-dir docker-dist
 
 # Add lockfile and package.json's of isolated subworkspace
 FROM node:16-alpine AS builder
-RUN apk add --no-cache libc6-compat
+RUN apk add --no-cache libc6-compat jq
 # this enables support for pnpm - https://nodejs.org/api/corepack.html
 RUN corepack enable
 WORKDIR /app
@@ -38,6 +38,7 @@ RUN pnpm install --offline
 COPY --from=slicer /app/docker-dist/full/ .
 COPY turbo.json .
 RUN pnpm turbo build:server
+RUN cat packages/server/package.json | jq -jr .version > packages/server/build/VERSION
 
 # Only keep runtime dependencies
 RUN rm -rf node_modules
@@ -58,8 +59,9 @@ ENV NODE_ENV production
 ENV PORT 3000
 
 ARG RELEASE_TAG=local
+ARG BUILD_URL=local
 ENV RELEASE_TAG $RELEASE_TAG
-LABEL release=$RELEASE_TAG
+ENV BUILD_URL $BUILD_URL
 
 # Don't run production as root
 RUN addgroup --system --gid 1001 nodejs && \
@@ -67,6 +69,14 @@ RUN addgroup --system --gid 1001 nodejs && \
 USER e2esdk
 
 COPY --from=builder --chown=e2esdk:nodejs /app/ .
+
+LABEL org.opencontainers.image.title="@e2esdk/server"
+LABEL org.opencontainers.image.description="End-to-end encryption server"
+LABEL org.opencontainers.image.version="$(cat packages/server/build/VERSION)"
+LABEL org.opencontainers.image.url="https//github.com/SocialGouv/e2esdk"
+LABEL org.opencontainers.image.documentation="https://github.com/SocialGouv/e2esdk/blob/main/packages/server/README.md"
+LABEL fr.gouv.social.fabrique.e2esdk.build.tag="$RELEASE_TAG"
+LABEL fr.gouv.social.fabrique.e2esdk.build.url="$BUILD_URL"
 
 EXPOSE 3000
 
