--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -75,6 +75,10 @@ jobs:
       #   continue-on-error: true
       #   uses: codecov/codecov-action@v2
 
+      - name: Get server version
+        id: server-pkg
+        run: echo "version=$(cat packages/server/package.json | jq -jr '.version')" >> $GITHUB_OUTPUT
+
       - name: Build (NPM)
         run: pnpm build:npm
 
@@ -89,7 +93,7 @@ jobs:
           labels: |
             org.opencontainers.image.revision=${{ github.sha }}
             org.opencontainers.image.created=${{ needs.tag.outputs.timestamp }}
-            org.opencontainers.image.version=${{$(cat packages/server/package.json | jq -jr '.version')}}
+            org.opencontainers.image.version=${{ steps.server-pkg.version }}
           tags: |
             e2esdk/server:ci
             e2esdk/server:${{ needs.tag.outputs.docker-tag }}
